--- a/requirements.txt
+++ b/requirements.txt
@@ -20,12 +20,14 @@ click-didyoumean==0.3.1
 click-plugins==1.1.1.2
 click-repl==0.3.0
 constantly==23.10.4
+cron_descriptor==2.0.6
 cryptography==46.0.3
 daphne==4.2.1
 decorator==5.2.1
 defusedxml==0.7.1
-Django==6.0
+Django==5.2.9
 django-appconf==1.2.0
+django-celery-beat==2.8.1
 django-cors-headers==4.9.0
 django-debug-toolbar==6.1.0
 django-environ==0.12.0
@@ -34,11 +36,15 @@ django-filter==25.2
 django-imagekit==6.0.0
 django-polymorphic==4.1.0
 django-sslserver==0.22
+django-timezone-field==7.2.1
 django-webauthn==0.0.2
+django_celery_results==2.6.0
 djangorestframework==3.16.1
 djangorestframework_simplejwt==5.5.1
 flake8==7.3.0
+flower==2.0.1
 google-auth==2.45.0
+humanize==4.15.0
 hyperlink==21.0.0
 idna==3.11
 ImageIO==2.37.2
@@ -47,6 +53,7 @@ Incremental==24.11.0
 isort==7.0.0
 kombu==5.5.4
 Markdown==3.10
+MarkupSafe==3.0.3
 mccabe==0.7.0
 moviepy==2.2.1
 msgpack==1.1.2
@@ -60,6 +67,7 @@ pillow==11.3.0
 pillow_heif==1.1.1
 platformdirs==4.5.1
 proglog==0.1.12
+prometheus_client==0.23.1
 prompt_toolkit==3.0.52
 py-ubjson==0.16.1
 py-webauthn==0.0.4
@@ -70,9 +78,11 @@ pycparser==2.23
 pyflakes==3.4.0
 PyJWT==2.10.1
 pyOpenSSL==25.3.0
+python-crontab==3.3.0
 python-dateutil==2.9.0.post0
 python-dotenv==1.2.1
 pytokens==0.3.0
+pytz==2025.2
 redis==7.1.0
 requests==2.32.5
 rsa==4.9.1
@@ -80,6 +90,7 @@ service-identity==24.2.0
 setuptools==80.9.0
 six==1.17.0
 sqlparse==0.5.3
+tornado==6.5.4
 tqdm==4.67.1
 Twisted==25.5.0
 txaio==25.12.2
